# uv_testpkg

./: CMakeLists.txt  README.md  package.xml  pyproject.toml
scripts/: uv_piptest.py
src/uv_testpkg/: __init__.py
