[project]
name = "uv-testpkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Kamorei", email = "47575691+Kamorei@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "moviepy>=2.2.1",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
